vcs/specs/parser/fail/types/using_transform_unclosed_parens.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, function, using, context, transform, error
// @description: Test detection of unclosed parentheses in transform call
// @expected-error: E018

// Transform method call must have balanced parentheses
type Callback is fn() using [Database.transactional(];
